2014-07-22  Filip Pizlo  <fpizlo@apple.com>

        Merge r168635, r168780, r169005, r169014, and r169143 from ftlopt.

    2014-05-20  Filip Pizlo  <fpizlo@apple.com>
    
            [ftlopt] DFG bytecode parser should turn GetById with nothing but a Getter stub as stuff+handleCall, and handleCall should be allowed to inline if it wants to
            https://bugs.webkit.org/show_bug.cgi?id=133105
    
            Reviewed by Michael Saboff.
            
            - GetByIdStatus now knows about getters and can report intelligent things about them.
              As is usually the case with how we do these things, GetByIdStatus knows more about
              getters than the DFG can actually handle: it'll report details about polymorphic
              getter calls even though the DFG won't be able to handle those. This is fine; the DFG
              will see those statuses and bail to a generic slow path.
            
            - The DFG::ByteCodeParser now knows how to set up and do handleCall() for a getter call.
              This can, and usually does, result in inlining of getters!
            
            - CodeOrigin and OSR exit know about inlined getter calls. When you OSR out of an
              inlined getter, we set the return PC to a getter return thunk that fixes up the stack.
              We use the usual offset-true-return-PC trick, where OSR exit places the true return PC
              of the getter's caller as a phony argument that only the thunk knows how to find.
            
            - Removed a bunch of dead monomorphic chain support from StructureStubInfo.
            
            - A large chunk of this change is dragging GetGetterSetterByOffset, GetGetter, and
              GetSetter through the DFG and FTL. GetGetterSetterByOffset is like GetByOffset except
              that we know that we're returning a GetterSetter cell. GetGetter and GetSetter extract
              the getter, or setter, from the GetterSetter.
            